k8_application/DeleteTaskTodoMicroservicea/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deletetask-todo
  labels:
    app: deletetask-todo-microservice
spec:
   replicas: 2
   selector:
      matchLabels:
          app: deletetask-todo-microservice
   template:
     metadata:
       labels:
          app: deletetask-todo-microservice
     spec:
       containers:
          - name: deletetask-todo-microservice-pod
            image: k8acrregistrydev.azurecr.io/deletetasktodo:latest
            ports:
              - containerPort: 8000
            resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
              limits:
                cpu: "250m"
                memory: "256Mi"
