k8_application/DeleteTaskTodoMicroservicea/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deletetask-todo-microservice-service
  labels:
    app: deletetask-todo-microservice
spec:
  selector:
    app: deletetask-todo-microservice
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
