k8_application/DeleteTaskTodoMicroservicea/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deletetask-todo-microservice-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: deletetask.tangi.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deletetask-todo-microservice-service
            port: 
              number: 80
